# chip8-emulator

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/skills/add-opcode/: SKILL.md
.github/workflows/: deploy.yml
chip8-app/: .htaccess  Cargo.toml  Trunk.toml  index.html
chip8-app/src/: main.rs
chip8-core/: Cargo.toml
chip8-core/src/: lib.rs
roms/: README.md  beep-test.ch8  input-test.ch8
