[package]
name = "chip8-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chip8-core = { path = "../chip8-core" }

# We depend ONLY on eframe and read egui/wasm_bindgen/web_sys through its
# re-exports (eframe::egui, eframe::wasm_bindgen, eframe::web_sys). Those crates
# must all match eframe's exact version, so letting eframe pin them removes a
# whole class of version-mismatch errors.
#
# ⚠ VERSION: I could not confirm the latest eframe from this sandbox. Check
#   https://crates.io/crates/eframe and set this to the newest 0.x. The web
#   entry point in src/main.rs follows the official `eframe_template`; if the
#   API has shifted for your version, lift that one block from the template
#   (see the note at the bottom of main.rs).
eframe = "0.31"
log = "0.4"

# Cross-platform native file dialog. On native it opens the OS picker; on wasm
# it triggers the browser's <input type=file>. Same crate, one call site — only
# the spawn mechanism differs (a worker thread on native, spawn_local on web).
rfd = "0.15"

# Cross-platform audio output for the beeper. Talks to the OS audio device on
# native (ALSA/PulseAudio/etc.) and to WebAudio on wasm — one backend, one code
# path. Native needs the ALSA dev headers to build (`libasound2-dev` on Debian/
# Ubuntu); the wasm build needs cpal's `wasm-bindgen` feature (set below).
cpal = "0.15"

# Web-only: drives the async eframe startup. Stable, rarely breaks across
# eframe versions.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
# cpal needs this feature to target the browser's WebAudio API. Cargo merges it
# with the base `cpal` dep above, so the native build is unaffected.
cpal = { version = "0.15", features = ["wasm-bindgen"] }
