[package]
name = "chip8-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chip8-core = { path = "../chip8-core" }

# We depend ONLY on eframe and read egui/wasm_bindgen/web_sys through its
# re-exports (eframe::egui, eframe::wasm_bindgen, eframe::web_sys). Those crates
# must all match eframe's exact version, so letting eframe pin them removes a
# whole class of version-mismatch errors.
#
# ⚠ VERSION: I could not confirm the latest eframe from this sandbox. Check
#   https://crates.io/crates/eframe and set this to the newest 0.x. The web
#   entry point in src/main.rs follows the official `eframe_template`; if the
#   API has shifted for your version, lift that one block from the template
#   (see the note at the bottom of main.rs).
eframe = "0.31"
log = "0.4"

# Cross-platform native file dialog. On native it opens the OS picker; on wasm
# it triggers the browser's <input type=file>. Same crate, one call site — only
# the spawn mechanism differs (a worker thread on native, spawn_local on web).
rfd = "0.15"

# Audio is the one feature with a genuinely different backend per target (see the
# AUDIO section in src/main.rs), so the two deps live in the target tables below.

# Native-only: cpal talks straight to the OS audio device. Needs the ALSA dev
# headers to build on Debian/Ubuntu (`libasound2-dev`).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"

# Web-only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Drives the async eframe startup. Stable, rarely breaks across eframe versions.
wasm-bindgen-futures = "0.4"
# WebAudio, driven directly (cpal on wasm can't satisfy the browser autoplay
# policy). These features pull in just the nodes we touch: a square oscillator →
# gain → speakers, with the context resumed on a user gesture. web-sys unifies
# with eframe's copy, so this only *adds* features to the same crate.
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioContextState",
    "BaseAudioContext",
    "AudioNode",
    "AudioParam",
    "AudioDestinationNode",
    "AudioScheduledSourceNode",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "Window",
    "EventTarget",
] }
